<resources>
    <string name="app_name">MADMiniProject</string>
    <string name="dashboard">My Dashboard</string>
    <string name="quiz">Quiz</string>
    <string name="achivement">Achivement</string>
    <string name="forum">Forum</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_activity_quiz_drex">Quiz_drex</string>
    <string name="tab_text_1">Last</string>
    <string name="tab_text_2">Name</string>
    <string name="tab_text_3">Complete</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="java_script">Java Script</string>
    <string name="r">R</string>
    <string name="sql">SQL</string>
    <string name="php">PHP</string>
    <string name="c">C</string>
    <string name="cpp">C++</string>
    <string name="java_quiz">JAVA</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting </string>


    //testcomment


    //Strings for teacherview

    <string name="Msg1">Logged In As</string>
    <string name="Msg2">"Name"</string>
    <string name="Msg3">"My Account"</string>
    <string name="Msg4">"Logout"</string>
    <string name="Msg5">"Create A Quiz"</string>
    <string name="correct">Correct</string>
    <string name="myquiz">My Quizzes</string>
    <string name="Messages">Messages</string>
    <string name="use">Username</string>

    //String resources for new quiz
    <string name="newqbim">New Quiz</string>
    <string name="newq">Create a new quiz</string>
    <string name="entertitle">Enter a quiz title (optional)</string>
    <string name="ans1">Insert the first answer</string>
    <string name="ans2">Insert the second answer</string>
    <string name="ans3">Insert the third answer</string>
    <string name="ans4">Insert the fourth answer</string>
    <string name="addq">Add another question</string>
    <string name="pub">Publish</string>


    //string resources for Rasitha
    //string resources for quiz end interface raz
    <string name="end_quiz">Quiz Ended</string>
    <string name="you_got">You Got:</string>
    <string name="percentage_correct"> 80% </string>
    <!--  this is a place holder for pie chart percentage  -->
    <string name="correct_ans"> correct </string>
    <string name="contact_lecturer"> contact Lecturer </string>
    <string name="home_button"> Home </string>

    //string resources for contact lecturer interface raz
    <string name="Contact_Lecturer_Header"> Contact Lecturer </string>
    <string name="Contact_Lecturer_msg1"> Your message will be sent to: </string>
    <string name="lecturer_prompt">Choose a lecturer:</string>

    <string-array name="lecturer_arrays">
        <item>lecturer1</item>
        <item>lecturer2</item>
        <item>lecturer3</item>
        <item>lecturer4</item>
        <item>lecturer5</item>
        <item>lecturer6</item>
        <item>lecturer7</item>
        <item>lecturer8</item>
    </string-array>
    <string name="message_prompt"> Enter Your Message Here: </string>
    <string name="Contact_Lecturer_btn1"> Add an Image </string>
    <string name="Contact_Lecturer_btn2"> Send </string>

    //String resources for messages interface raz
    <string name="Mesages_Interface_Header"> Messages </string>
    <string name="sender_name"> FirstName LastName </string>
    <string name="sender_msg"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porta purus. </string>

    //String Resources for Replay Interface Raz
    <string name="Reply_Interface_Header1"> Reply to : </string>
    <string name="Reply_Interface_Header2">  First Name </string>
    <string name="Recived_MSG">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porta purus. </string>
    <string name="Sent_MSG">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porta purus. </string>
    <string name="Reply_MSG_Enter_Box">  Enter Reply </string>
    //String resources for myquizzes
    <string name="pubq">Published Quizzes</string>
    <string name="d">Drafts</string>
    <string name="qname">""QUIZNAME""</string>

    <string name="not">Notification</string>
    <string name="read">Mark as read</string>
    <string name="clear">Clear all notifications</string>

    //String resources of IT19223322
    <string name="stdname">Student Name</string>
    <string name="stdid">Student ID</string>
    <string name="ps">Prob and Stat</string>
    <string name="psmark"> </string>
    <string name="dsa">DSA</string>
    <string name="dsamark"> </string>
    <string name="mad">MAD</string>
    <string name="madmark"> </string>
    <string name="average">Average</string>
    <string name="averagevalue"> </string>

    <string name="leaderboardtxt">Leader Board</string>
    <string name="r1c1">Student ID</string>
    <string name="r1c2">Student Name</string>
    <string name="r1c3">Rank</string>
    <string name="r1c4">More Info</string>
    <string name="r2c1"> </string>
    <string name="r2c2"> </string>
    <string name="r2c3"> </string>
    <string name="r3c1"> </string>
    <string name="r3c2"> </string>
    <string name="r3c3"> </string>


    <string name="stdname2">Student Name</string>
    <string name="stdid2">Student ID</string>
    <string name="date1">Date</string>
    <string name="time1">Time</string>
    <string name="notification1">Notification</string>
    <string name="msg1"> </string>
    <string name="msg2"> </string>
    <string name="msg3"> </string>
    <string name="msg4"> </string>
    <string name="msg5"> </string>
    <string name="msg6"> </string>

    <string name="stdname3">Student Name</string>
    <string name="stdid3">Student ID</string>
    <string name="messagebox"> Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_nocahange">Name</string>
    <string name="email_nocahnge">Email</string>
    <string name="address_nochange">Address</string>
    <string name="passowr_nochange">Password</string>

    <string name="beginner_topic">For New Comer</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobile">Mobile</string>

</resources>