<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".new_quiz">


    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:lines="@android:integer/config_mediumAnimTime"
        android:text="Quiz Manager"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E91E63"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/answer1"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="374dp"
        android:layout_marginBottom="316dp"
        android:ems="10"
        android:hint="@string/ans1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer4"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="555dp"
        android:layout_marginBottom="131dp"
        android:ems="10"
        android:hint="@string/ans4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="431dp"
        android:layout_marginBottom="260dp"
        android:ems="10"
        android:hint="@string/ans2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="491dp"
        android:layout_marginBottom="195dp"
        android:ems="10"
        android:hint="@string/ans3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="422dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:tabBackground="?attr/actionBarDivider"
        app:tabIconTint="@color/colorAccent"
        app:tabIndicator="@drawable/ic_launcher_background"
        app:tabIndicatorColor="#013E67"
        app:tabRippleColor="#0325E4"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newqbim" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myquiz" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Messages" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="171dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:text="Logged in as"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/question"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="24dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="Type your question here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quiztitle"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="464dp"
        android:background="#283593"
        android:backgroundTint="#3343B1"
        android:elevation="2dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/entertitle"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addquestionButton"
        android:layout_width="162dp"
        android:layout_height="62dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="628dp"
        android:layout_marginBottom="41dp"
        android:background="#1565C0"
        android:text="@string/addq"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/publishbutton"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="627dp"
        android:layout_marginBottom="40dp"
        android:background="#1565C0"
        android:text="@string/pub"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>