<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".notifications">

    <TextView
        android:id="@+id/notification5"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="493dp"
        android:layout_marginBottom="154dp"
        android:background="#286893"
        android:gravity="center"
        android:text="@string/not"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="493dp"
        android:layout_marginBottom="211dp"
        android:gravity="center"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notification3"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="387dp"
        android:layout_marginBottom="260dp"
        android:background="#286893"
        android:gravity="center"
        android:text="@string/not"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="387dp"
        android:layout_marginBottom="317dp"
        android:gravity="center"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notification2"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="363dp"
        android:background="#286893"
        android:gravity="center"
        android:text="@string/not"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="420dp"
        android:gravity="center"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:clickable="false"
        android:elevation="2dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:lines="@android:integer/config_mediumAnimTime"
        android:text="Quiz Manager"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E91E63"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="426dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:tabBackground="?attr/actionBarDivider"
        app:tabIconTint="@color/colorAccent"
        app:tabIndicator="@drawable/ic_launcher_background"
        app:tabIndicatorColor="#013E67"
        app:tabRippleColor="#0325E4"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newqbim" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myquiz" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Messages" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="171dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:text="Logged in as"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notification1"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="463dp"
        android:background="#286893"
        android:gravity="center"
        android:text="@string/not"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="520dp"
        android:gravity="center"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="618dp"
        android:layout_marginBottom="60dp"
        android:background="#8F0404"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="383dp"
        android:layout_height="424dp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="166dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>